<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#F2F6FA"
    tools:context="com.example.chikaapp.fragment.AddIRDeviceFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:padding="10dp"
        android:text="@string/create_device"
        android:textColor="@android:color/black"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <TextView
        android:padding="10dp"
        android:layout_below="@+id/ln_Device_Name"
        android:layout_marginStart="15dp"
        android:id="@+id/typeDevice"
        android:text="@string/type_device"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="60dp"
                android:id="@+id/cardView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img_air_cond"
                    android:padding="20dp"
                    android:src="@drawable/air_conditioner_icon"
                    android:layout_width="120dp"
                    android:layout_height="120dp"/>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/img_tick"
                android:src="@drawable/img_safe1"
                android:layout_width="20dp"
                android:visibility="gone"
                android:layout_below="@+id/cardView1"
                android:layout_height="20dp"/>

            <TextView
                android:layout_gravity="center_horizontal"
                android:id="@+id/tv_air_cond"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/cardView1"
                android:text="@string/air_conditioner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="60dp"
                android:id="@+id/cardView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img_tv"
                    android:padding="20dp"
                    android:src="@drawable/television_icon"
                    android:layout_width="120dp"
                    android:layout_height="120dp"/>
            </androidx.cardview.widget.CardView>

            <ImageView
                android:id="@+id/img_tick1"
                android:src="@drawable/img_safe1"
                android:layout_width="20dp"
                android:layout_marginStart="20dp"
                android:visibility="gone"
                android:layout_below="@+id/cardView2"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/tv_television"
                android:text="@string/television"
                android:layout_below="@+id/cardView2"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </LinearLayout>
    <TextView
        android:padding="10dp"
        android:layout_below="@+id/ln_Device_Name"
        android:layout_marginStart="15dp"
        android:id="@+id/nameDevice"
        android:text="@string/device_name"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:background="@drawable/bg_stroke"
        android:id="@+id/edt_device_name"
        android:padding="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:hint="@string/exp_device"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_Done"
        android:text="@string/done"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>
