<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white"
    tools:context="com.example.chikaapp.fragment.EditUserInfoFragment">

    <TextView
        android:id="@+id/tv_title_edit_user_info"
        android:layout_width="wrap_content"
        android:text="@string/edit_info"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:textAllCaps="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/ln_phone"
        android:layout_below="@+id/tv_title_edit_user_info"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_stroke"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_phone"
            android:text="@string/phone"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_marginEnd="20dp"
            android:imeOptions="actionDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/img_edit_phone"
            android:layout_gravity="center"
            android:src="@drawable/ic_edit"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_email"
        android:layout_below="@+id/ln_phone"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_stroke"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_email"
            android:text="@string/email"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edt_email"
            android:imeOptions="actionDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/img_edit_email"
            android:layout_gravity="center"
            android:src="@drawable/ic_edit"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_birthday"
        android:layout_below="@+id/ln_email"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_stroke"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_birthday"
            android:text="@string/birthday"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edt_birthday"
            android:imeOptions="actionDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/img_edit_birthday"
            android:layout_gravity="center"
            android:src="@drawable/ic_edit"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ln_address"
        android:layout_below="@+id/ln_birthday"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_stroke"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_address"
            android:text="@string/address"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edt_address"
            android:textSize="16sp"
            android:imeOptions="actionDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/img_edit_address"
            android:layout_gravity="center"
            android:src="@drawable/ic_edit"
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_done"
        android:text="@string/done"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/ln_address"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</RelativeLayout>
