<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">
    <data></data>
    <RelativeLayout
        android:background="@drawable/bg_new"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_centerInParent="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tvForgetPassword"
                android:text="@string/put_email"
                android:textSize="19sp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/edtEmail"
                android:background="@drawable/bg_edit_text"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:padding="10dp"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp" />
            <TextView
                android:id="@+id/tvConfirmEmail"
                android:text="@string/invalid"
                android:layout_marginStart="30dp"
                android:textColor="#77FD83"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/tvConfirmEmail1"
                android:text="@string/not_invalid"
                android:layout_marginStart="30dp"
                android:textColor="#E21405"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btnSendEmail"
                android:text="@string/send"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textAllCaps="false"
                android:background="@drawable/bg_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tvBackTo"
                    android:text="Back to"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tvSignIn"
                    android:text=" Sign in"
                    android:textSize="18sp"
                    android:textColor="#87DF22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>
